# baselOne2024

./: .gitignore  .justfile  CHANGELOG.md  README.md  index.html  qr  qr_me  renovate.json
.github/: dependabot.yml
.github/workflows/: flaskTest.yml  ginTest.yml  prepare-release.yaml  publishSlides.yml  rocketTest.yml  springBootTest.yml
feedback/: feedback.md
scripts/: english.md  english_internal_deprecated.md
showcases/flask/: Dockerfile  compose.yml  justfile  requirements.txt
showcases/flask/api_tests/: hurl.env.test
showcases/flask/src/: main.py
showcases/gin/: Dockerfile  compose.yml  go.mod  go.sum  justfile  main.go
showcases/gin/api_tests/: hurl.env.test
showcases/gin/api_tests/implemented/: healthz.hurl
showcases/rocket/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  api_tests.sh  compose.yml  deny.toml  htests.sh  justfile
showcases/rocket/api_tests/: hurl.env.test  hurl.env.test~  hurl.just  variables
showcases/rocket/api_tests/implemented/: create_pokemons.hurl  pokemon_html.hurl  protected.hurl
showcases/rocket/assets/: app.css  htmx-alpine-morph.js
showcases/rocket/src/: main.rs
showcases/rocket/src/assets/: mod.rs
showcases/rocket/src/auth/: mod.rs
showcases/rocket/src/poke_endpoints/: mod.rs
showcases/rocket/src/pokedex/: mod.rs  pokemon.rs
showcases/rocket/store/: c6701da8-77f5-4ff8-89f1-8eac95e41235-run.html  c6701da8-77f5-4ff8-89f1-8eac95e41235-source.html  c6701da8-77f5-4ff8-89f1-8eac95e41235-timeline.html  e602657d-5823-4b87-bb51-8336247cba30-run.html  e602657d-5823-4b87-bb51-8336247cba30-source.html  e602657d-5823-4b87-bb51-8336247cba30-timeline.html
showcases/rocket/templates/: pokemons.html
showcases/rocket/token_creation/: payload.json
showcases/springboot/: build.gradle.kts  compose.yaml  justfile  settings.gradle.kts
showcases/springboot/api_tests/: hurl.env.test  hurl.env.test~
showcases/springboot/api_tests/implemented/: protected.hurl  protected_return.hurl  (+1 more)
showcases/springboot/token_creation/: justfile  payload.json
slides/: slides.md  todo.md
(+11 files in other folders)
