[package]
name = "hurl-rocket"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0", features = ["json", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["serde", "v4"] }

jsonwebtoken = { version = "9.2.0", default-features = false }

reqwest = { version = "0.11.26", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }